<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BSTDictionary</string>
    <string name="action_settings">Settings</string>
    <string name="wordHint">Enter a Word</string>
    <string name="searchButtonString">Search</string>
    <string name="clearButtonString">Clear</string>
    <string name="partOfSpeechHint">Part Of Speech</string>
    <string name="definitionHint">Enter The Definition</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string-array name="partOfSpeechArray">
        <item>Select a Part of Speech</item>
        <item>noun</item>
        <item>verb</item>
        <item>pronoun</item>
        <item>adjective</item>
        <item>adverb</item>
        <item>preposition</item>
        <item>conjunction</item>
        <item>interjection</item>
    </string-array>

</resources>
